:bug: fix valine code color in dark mode

--- a/source/css/_widget/comment.styl
+++ b/source/css/_widget/comment.styl
@@ -20,4 +20,8 @@
 // valine
 .v[data-class=v] p {
   color: var(--hty-secondary-text-color) !important;
+
+  code {
+    color: black;
+  }
 }
